[tool.poetry]
name = "rul_datasets"
version = "0.3.0"
description = "A collection of datasets for RUL estimation as Lightning Data Modules."
authors = ["Krokotsch, Tilman <tilman.krokotsch@iav.de>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.9.0"
pytorch-lightning = "^1.4.4"
scikit-learn = "^1.0.0"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.8.0"}
flake8 = "^5.0.4"
mypy = "^0.981"
hydra-core = "^1.1.1"
pytest = "^7.1.3"
types-requests = "^2.28.11.2"

[tool.pytest.ini_options]
markers = ["needs_data: needs the dataset on disk to run"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
