[tool.poetry]
name = "rul_datasets"
version = "0.3.0"
description = "A collection of datasets for RUL estimation as Lightning Data Modules."
authors = ["Krokotsch, Tilman <tilman.krokotsch@tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
pytorch-lightning = "^1.4.4"
scikit-learn = "^1.0.0"
tqdm = "^4.62.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
flake8 = "^5.0.4"
mypy = "^0.981"
hydra-core = "^1.1.1"
pytest = "^7.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"

[tool.pytest.ini_options]
markers = ["needs_data: needs the dataset on disk to run"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
