[tool.poetry]
name = "rul_datasets"
version = "0.11.3"
description = "A collection of datasets for RUL estimation as Lightning Data Modules."
authors = ["Krokotsch, Tilman <tilman.krokotsch@tu-berlin.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://krokotsch.eu/rul-datasets"
repository = "https://github.com/tilman151/rul-datasets"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering "
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
pytorch-lightning = "^1.4.4"
scikit-learn = "^1.0.0"
tqdm = "^4.62.2"
h5py = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
flake8 = "^5.0.4"
mypy = "^1.0.0"
hydra-core = "^1.1.1"
pytest = "^7.1.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"
mkdocs-jupyter = "^0.22.0"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"

[tool.pytest.ini_options]
markers = ["needs_data: needs the dataset on disk to run"]
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning',
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."rul_datasets/__init__.py"]